chromeos: Disable touchscreen for user inactivity.

Make TabletPowerButtonController disable the touchscreen
when powerd reports that the display was turned off
automatically (typically due to user inactivity).

This is intended to remove an inconsistency from the user's
perspective where the touchscreen turns the screen on when
the device is awake but in a screen-off state due to
inactivity, but doesn't wake the device when it's in S3
(i.e. suspended, asleep).

BUG=743291
TEST=manual: run set_short_powerd_timeouts, then:
     a) tap power button and verify touchscreen is disabled.
        after tapping power button again, screen turns on
        and touchscreen works.
     b) wait 20 seconds for screen to turn off due to
        inactivity and verify touchscreen is disabled. after
        hitting a key, screen turns on and touchscreen works
        again.
     c) manually decrease brightness to 0, wait five
        seconds, and then verify that touchscreen increases
        backlight brightness to min-visible level

Change-Id: I16c9769f587fe91bf2e6c3e68d06ccb83b299294
Reviewed-on: https://chromium-review.googlesource.com/572766
Reviewed-by: Qiang(Joe) Xu <warx@chromium.org>
Commit-Queue: Dan Erat <derat@chromium.org>
Cr-Commit-Position: refs/heads/master@{#487212}
Former-commit-id: 8dbc2286a282432472add1a0ad491925dbf6f1c4